# EasyTraining

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: dpo_config.yaml  sdft_config.yaml  sdft_vllm_config.yaml  sft_config.yaml  trl_dpo_config.yaml  trl_sdft_config.yaml  trl_sft_config.yaml
jobs/: dpo_job.sh  launcher.sh  sdft_job.sh  sft_job.sh  trl_dpo.sh
src/data/: analyze_generations.py  generate.py  run_generate.sh  token_stats.py
src/dpo/: dpo.py  prepare_op_dataset.py  trl_dpo.py
src/filtering/: llm_judge.py  pipeline_filtering.py  run_judge.sh  run_pipeline.sh
src/other/: loop_sanity.py  run_loop_sanity.sh
src/selfdistillation/: prepare_dataset.py  sdft.py  sdft_config.py  sdft_trainer.py  sdft_vllm.py  trl_sdft.py
src/sft/: trl_sft.py
