[project]
name = "easytraining"
version = "0.1.0"
description = "Config-driven DPO & SFT training with TRL"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "peft==0.18.1",
    "bitsandbytes==0.49.1",
    "pyyaml==6.0.3",
    "wandb==0.24.2",
    "datasets==4.5.0",
    "accelerate==1.12.0",
    "trl==0.28.0",
]

[project.optional-dependencies]
train = [
    "torch==2.10.0",
    "transformers==5.1.0",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3%2Bcu128torch2.10-cp311-cp311-linux_x86_64.whl",
]

sdft = [
    "torch==2.9.1",
    "transformers==4.57.6",
    "vllm==0.15.1",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3+cu128torch2.9-cp311-cp311-linux_x86_64.whl",
]